--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The Waterloo Rocketry Website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -33,7 +33,7 @@
         }
       }(window.location))
     </script>
-    <title>React App</title>
+    <title>Waterloo Rocketry</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
